ビルド修正

--- a/build.xml
+++ b/build.xml
@@ -12,6 +12,7 @@
             SciendeDesign GUI library
     </description>
 
+    <property name="module.version.target" value="0.3.0" />
     <property file="project/build.properties"/>
 
     <!-- - - - - - - - - - - - - - - - - - 
@@ -27,26 +28,30 @@
         <delete includeemptydirs="true" dir="${build.dir}"/>
     </target>
 
+    <target name="clean-lib" description="clean lib dir">
+        <delete dir="${lib.dir}"/>
+    </target>
+    
     <!-- ================================= 
           target: Resolve dependency              
          ================================= -->
-    <target name="resolve" description="resolve dependencies with ivy">
-        <ivy:resolve file="${ivy.file}"/>
-
-        <!-- Class Paths -->
-        <ivy:cachepath pathid="lib.compile.classpath" conf="compile" />
-        <ivy:cachepath pathid="lib.test.classpath" conf="test" />
+    <target name="retrieve" description="retrieve dependencies with ivy">
+        <ivy:retrieve symlink="true" />
     </target>
 
     <!-- ================================= 
           target: compile              
          ================================= -->
-    <target name="compile" depends="init, resolve" description="compile the project">
+    <target name="compile" depends="init" description="compile the project">
         <mkdir dir="${classes.main.dir}"/>
 
+        <path id="lib.compile.classpath">
+            <fileset dir="${lib.dir}" includes="**/*.jar" />
+        </path>
+        
         <javac destdir="${classes.main.dir}" source="${source}" target="${target}"
                 encoding="UTF-8" debug="true" includeantruntime="false">
-            <compilerarg value="-Xlint:unchecked"/>
+            <compilerarg value="-Xlint:all"/>
             <src path="${src.main.java.dir}" />
             <classpath refid="lib.compile.classpath" />
         </javac>
@@ -58,7 +63,6 @@
     <target name="package" depends="version, compile" description="make a jar file for this project">
         <jar destfile="${package.file}">
             <fileset dir="${classes.main.dir}" />
-            <!-- <fileset dir="${src.main.resources.dir}" /> -->
             <manifest>
                 <attribute name="Built-By" value="${user.name}" />
                 <attribute name="Build-Version" value="${version}" />
@@ -67,11 +71,53 @@
     </target>
 
     <!-- ================================= 
+          target: package-sources
+         ================================= -->
+    <target name="jar-sources" depends="init" description="description">
+        <zip destfile="${source.file}">
+            <fileset dir="${src.main.java.dir}" includes="**/*.java" />
+        </zip>
+    </target>
+
+    <!-- ================================= 
+          target: create Javadoc              
+         ================================= -->
+    <target name="javadoc" depends="init" description="Create Javadoc">
+        <path id="lib.compile.classpath">
+            <fileset dir="${lib.dir}" includes="**/*.jar" />
+        </path>
+            
+        <javadoc destdir="${javadoc.dir}" encoding="UTF-8" source="1.6" author="true" version="true"
+                access="${javadoc.access}" docencoding="UTF-8" charset="UTF-8" doctitle="${javadoc.title}">
+            <arg value="-J-Dfile.encoding=UTF-8"/>
+            <classpath refid="lib.compile.classpath" />
+            <sourcepath path="${src.main.java.dir}"/>
+            <link href="${javadoc.api-ref.javase}"/>
+        </javadoc>
+    </target>
+    
+    <!-- ================================= 
+          target: package-javadoc
+         ================================= -->
+    <target name="jar-javadoc" depends="javadoc" description="description">
+        <jar basedir="${javadoc.dir}" destfile="${javadoc.file}"/>
+    </target>
+    
+    <target name="dist" depends="">
+        <property name="version" value="${module.version.target}" />
+        <ivy:info/>
+        <ivy:deliver delivertarget="default" pubrevision="${version}"/>
+        <copy file="${package.file}" tofile="${ivy.distrib.dir}/jars/${ant.project.name}-${version}.jar" />
+        <copy file="${source.file}" tofile="${ivy.distrib.dir}/sources/${ant.project.name}-sources-${version}.jar" />
+        <copy file="${javadoc.file}" tofile="${ivy.distrib.dir}/javadocs/${ant.project.name}-javadocs-${version}.jar" />
+    </target>
+    
+    <!-- ================================= 
            target: publish-local
           ================================= -->
-    <target name="publish-local" depends="clean, local-version, package"
+    <target name="publish-local" depends="local-version, dist"
             description="publish this project in the local ivy repository">
-        <ivy:publish artifactspattern="${build.dir}/[artifact].[ext]"
+        <ivy:publish
             resolver="local"
             pubrevision="${version}"
             pubdate="${now}"
@@ -92,41 +138,31 @@
     <!-- ================================= 
           target: publish              
          ================================= -->
-    <target name="publish" depends="clean, package" description="publish this project in the ivy repository">
+    <target name="publish" depends="version, dist" description="publish this project in the ivy repository">
         <ivy:publish
-            artifactspattern="${build.dir}/[artifact].[ext]"
             resolver="shared"
             pubrevision="${version}"
             status="release" />
         <echo message="project ${ant.project.name} released with version ${version}" />
     </target>
 
-    <target name="ivy-new-version" unless="ivy.new.revision">
-        <!-- default module version prefix value -->
-        <property name="module.version.prefix" value="${module.version.target}-dev-b" />
-
-        <!-- asks to ivy an available version number -->
-        <ivy:info file="${ivy.file}" />
-        <ivy:buildnumber
-            organisation="${ivy.organisation}" module="${ivy.module}"
-            revision="${module.version.prefix}" defaultBuildNumber="1" revSep="" />
-    </target>
-
     <target name="local-version">
         <tstamp>
             <format property="now" pattern="yyyyMMddHHmmss" />
         </tstamp>
-        <property name="ivy.new.revision" value="${module.version.target}-local-${now}" />
+        <property name="version" value="${module.version.target}-local-${now}" />
     </target>
 
-    <target name="version" depends="ivy-new-version">
-        <!-- create version file in classpath for later inclusion in jar -->
-        <mkdir dir="${classes.main.dir}" />
-        <echo message="version=${ivy.new.revision}"
-            file="${classes.main.dir}/${ant.project.name}.properties" append="false" />
-
-        <!-- load generated version properties file -->
-        <property file="${classes.main.dir}/${ant.project.name}.properties" />
+    <target name="version">
+        <property name="version" value="${module.version.target}" />
     </target>
+    
+    <!-- ================================= 
+          target: build              
+         ================================= -->
+    <target name="build" depends="package, jar-javadoc, jar-sources" description="build artifacts">
+        
+    </target>
+
 </project>
 
