--- a/project/build.properties
+++ b/project/build.properties
@@ -1,10 +1,11 @@
-module.version.target = 0.2
-
 target = 1.6
 source = 1.6
 
 project.dir = ${basedir}/project
 build.dir = ${basedir}/build
+lib.dir = ${basedir}/lib
+artifacts.dir = ${build.dir}/artifacts
+dist.dir = ${basedir}/distrib
 
 # for source files
 src.dir = ${basedir}/src
@@ -23,8 +24,17 @@ classes.dir = ${build.dir}/classes
 classes.main.dir = ${classes.dir}/main
 classes.test.dir = ${classes.dir}/test
 
-ivy.file = ${project.dir}/ivy.xml
-# for Jenkins integration
-ivy.shared.default.root = /Shared Items/Development/ivy
+ivy.dep.file = ${project.dir}/ivy.xml
 
-package.file = ${build.dir}/${ant.project.name}.jar
+# jar package
+package.file = ${artifacts.dir}/${ant.project.name}.jar
+
+# javadoc
+javadoc.dir = ${build.dir}/javadoc
+javadoc.title = scid-bio API
+javadoc.access = public
+javadoc.api-ref.javase = http://javadoc.sci-d.co.jp/javase/ja/api/
+javadoc.file = ${artifacts.dir}/${ant.project.name}-javadocs.jar
+
+# sources
+source.file = ${artifacts.dir}/${ant.project.name}-sources.jar
