ビルドファイル修正

--- a/project/build.properties
+++ b/project/build.properties
@@ -24,7 +24,9 @@ classes.dir = ${build.dir}/classes
 classes.main.dir = ${classes.dir}/main
 classes.test.dir = ${classes.dir}/test
 
+# ivy
 ivy.dep.file = ${project.dir}/ivy.xml
+ivy.retrieve.pattern = ${lib.dir}/[conf]/[artifact]-[revision](-[classifier]).[ext]
 
 # jar package
 package.file = ${artifacts.dir}/${ant.project.name}.jar
